Fixes on game and added a bomb defeat message

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 DB_AUTOMIGRATE=TRUE
 DEBUG=TRUE
 PORT=8080
-DB_DSN=postgres://test:test@localhost:5432/test?sslmode=disable
+DATABASE_URL=postgres://test:test@localhost:5432/test?sslmode=disable
