--- a/.air.conf
+++ b/.air.conf
@@ -9,7 +9,7 @@ cmd = "go build -v -o ./tmp/server ."
 # Binary file yields from "cmd".
 bin = "tmp/server"
 # Customize binary.
-full_bin = "DEBUG=TRUE PORT=8080 DB_AUTOMIGRATE=TRUE DB_DSN=postgres://test:test@localhost:5432/test?sslmode=disable ./tmp/server"
+full_bin = "DEBUG=TRUE PORT=80 DB_AUTOMIGRATE=TRUE DATABASE_URL=postgres://test:test@localhost:5432/test?sslmode=disable ./tmp/server"
 # Watch these filename extensions.
 include_ext = ["go", "tpl", "tmpl", "html"]
 # Ignore these filename extensions or directories.
